# Sage

./: .dockerignore  .env.sample  .gitignore  .mergebot.yml  Dockerfile  Makefile  README.md  chainlit.md  docker-compose.yml  entrypoint  extra_packages.txt  layout.yaml  mergebot_flow.html  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/: dependabot.yml
.github/actions/python_setup/: action.yml
.github/workflows/: ci.yml  development.yml
docs/: chat_overview.md  configuration.md  installation.md  intro.md  llms.md  sources.md  tools.md
examples/agents/: agent_creator_crew.yaml  c_plus_fault_crew.yaml  code_analysis_crew.yaml  complexity_assessment_crew.yaml  file_crew.yaml  game_crew.yaml  impact_assessment_crew.yaml  impact_evaluator_crew.yaml  marketing_crew.yaml  mobile_app_crew.yaml  mr_decision_execution_crew.yaml  mr_processing_crew.yaml  mr_publication_crew.yaml  python_testing_team.yaml  refactor_crew.yaml  risk_assessment_crew.yaml  test_coverage_crew.yaml  web_developer_crew.yaml
examples/agents_bak/: impact_assessment_crew.yaml  mr_decision_execution_crew.yaml  mr_processing_crew.yaml
public/: stylesheet.css
sage/: agents1.py  app.py  chat.py  chats2.py  config.toml  constants.py  data_loader.py  test.py
sage/agent/: crew.py  memory.py  tools_finder.py
sage/flows/: mergebot.py
sage/models/: chat_prompt.py  sage_crew copy 2.yaml  sage_crew copy.yaml  sage_crew.yaml
sage/prompts/: jira.yaml
sage/sources/: loaders.py  mode_handlers.py  qa.py  retrievers.py  runnable.py  source_manager.py  sources.py  utils.py
sage/tools/: gitlab_tool.py
sage/utils/: agent.py  ai_tools.py  exceptions.py  jira_agent.py  jira_helper.py  labels.py  llmlingua_filter.py  loaders.py  logger.py  source_manager.py  source_qa.py  sources.py  supports.py  validator.py
sage/validate/: crew_agents.py
sage/validators/: config_toml.py  crew_ai.py  starters.py
tests/: README.md  conftest.py
tests/unit_tests/: extras.py  test_constants.py
tests/unit_tests/agent/: test_tools_finder.py
tests/unit_tests/models/: test_chat_prompts.py
tests/unit_tests/sources/: test_retrievers.py  test_runnable.py  test_source_manager.py  test_utils.py
tests/unit_tests/utils/: test_validator.py
tests/unit_tests/validators/: test_config_toml.py  test_crew_ai.py  test_starters.py
tests/utils/: test_validator.py
