[tool.poetry]
name = "sage"
version = "0.0.16"
description = "Sage: A conversational AI assistant simplifying data interactions with intuitive ease"
authors = ["Ayo Ayibiowu <charles.ayibiowu@hotmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
anyio = "^3.7.1"
asyncer = "^0.0.7"
duckduckgo-search = "7.2.1"
aiohttp = "^3.11.11"
faiss-cpu = "1.9.0"
gitpython = "^3.1.44"
html2text = "^2024.2.26"
huggingface-hub = "^0.27.1"
jira = "^3.8.0"
markdownify = "^0.13.1"
openai = "^1.60.1"
pdf2image = "1.17.0"
python-docx = "1.1.2"
pyyaml = "6.0.1"
requests = "2.32.3"
sentence-transformers = "^3.3.1"
toml = "0.10.2"
transformers = "^4.45.2"
unstructured = { extras = ["docx", "pdf", "xlsx"], version = "^0.16.11" }
xlsxwriter = "3.1.9"
python-gitlab = "4.3.0"
markdown = "^3.5.2"
apscheduler = "^3.10.4"
croniter = "^5.0.1"
atlassian-python-api = "^3.41.11"
aiosqlite = "^0.20.0"
litellm = "^1.46.0"
dataclasses-json = "^0.6.7"
chainlit = "1.3.2"
crewai = "^0.86.0"
langchain-core = "^0.3.15"
langchain = "^0.3.7"
langchain-community = "^0.3.5"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
codespell = { version = "^2.2.6" }
ruff = { version = "^0.3.0" }

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "default::DeprecationWarning:sage.*",
    "default::PendingDeprecationWarning:sage.*",
]

[tool.codespell]
skip = "./.git,./data,./poetry.lock"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
